quest-4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - image: civo/docker-hello-world:latest
          name: hello-world
          resources:
              limits:
                memory: 128Mi
                cpu: 0.5
              requests:
                memory: 128Mi
